errorsample/sample6.txt
practice0.c:6:13: error: use of undeclared identifier 'a'
printf("%d",a);
            ^
1 error generated.